# libPollIO

./: CMakeLists.txt  README.md
include/PollIO/: Concepts.h  HandlerVisitor.h  NativeSocket.h  PollIO.h  PollIOBase.h  PollIOFwd.h  SocketHandler.h  TCPConnection.h  TCPDirect.h
include/PollIO/detail/: Buffer.h
tests/: NativeSocket_test.cxx  main.cxx
